# mq-tui

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
assets/: demo.md  demo.tape
src/: app.rs  event.rs  main.rs  ui.rs
src/ui/: treeview.rs
tests/: tests.rs
