[package]
authors = ["Takahiro Sato <harehare1110@gmail.com>"]
description = "TUI for mq, a jq-like Markdown processing tool"
documentation = "https://mqlang.org/book/"
edition = "2024"
exclude = ["tests/*", "examples/*", "docs/*", ".github/*"]
license = "MIT"
name = "mq-tui"
readme = "README.md"
repository = "https://github.com/harehare/mq-tui"
version = "0.1.4"

[dependencies]
arboard = {version = "3.6.1", default-features = false}
clap = {version = "4.5.23", features = ["derive"]}
crossterm = "0.29.0"
itertools = "0.14.0"
log = "0.4.29"
miette = {version = "7.6.0", features = ["fancy"]}
mq-lang = "0.5.5"
mq-markdown = "0.5.5"
ratatui = "0.29.0"
unicode-width = "0.2.0"

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = "z"
panic = "abort"
strip = true

[package.metadata.binstall]
pkg-fmt = "bin"
pkg-url = "{ repo }/releases/download/v{ version }/mq-tui-{ target }{ binary-ext }"

